[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/background-day.png" type="Texture" id=1]
[ext_resource path="res://sprites/bluebird-upflap.png" type="Texture" id=2]
[ext_resource path="res://sprites/bluebird-midflap.png" type="Texture" id=3]
[ext_resource path="res://sprites/bluebird-downflap.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://sprites/gameover.png" type="Texture" id=6]
[ext_resource path="res://sprites/message.png" type="Texture" id=7]
[ext_resource path="res://Bird.gd" type="Script" id=8]
[ext_resource path="res://Pipes.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 19.0

[sub_resource type="LineShape2D" id=3]

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Backround" type="Sprite" parent="."]
position = Vector2( 144, 256 )
z_index = -1
texture = ExtResource( 1 )

[node name="Bird" type="RigidBody2D" parent="."]
position = Vector2( 144, 260 )
collision_layer = 3
collision_mask = 3
mode = 1
mass = 1.11
gravity_scale = 3.0
contacts_reported = 5
contact_monitor = true
sleeping = true
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bird"]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 149, 512 )
gravity = 200.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Game Over" type="Sprite" parent="."]
visible = false
position = Vector2( 152, 285 )
texture = ExtResource( 6 )

[node name="Start game" type="Sprite" parent="."]
position = Vector2( 145, 213 )
texture = ExtResource( 7 )

[node name="Pipes" parent="." instance=ExtResource( 9 )]

[connection signal="body_entered" from="Bird" to="." method="_on_Bird_body_entered"]
[connection signal="body_exited" from="Bird" to="." method="_on_Bird_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="bird_is_dead"]
[connection signal="pipe_hit" from="Pipes" to="." method="_on_Pipes_pipe_hit"]
[connection signal="score" from="Pipes" to="." method="_on_Pipes_score"]
